styles/_work.scss
.ic-work-wrapper{
    height: $contentHeight;
    width: 100%;
    &__title{
        font-size: 48px;
        line-height: 55px;
        text-align: center;
        letter-spacing: 0.02em;
        @include mobile{
            font-size: 32px;
            line-height: 38px;
            margin-top: 50px;
        }
        @include tablet{
            font-size: 40px;
            line-height: 48px;
            margin-top: 100px;
        }
    }
    &__tags{
        margin-top: 40px;
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: $background;
        position: sticky;
        top: 140px;
        z-index: 2;
        padding-top: 10px;
        padding-bottom: 16px;
        @include mobile{
            top: 160px;
            max-width: 350px;
            flex-wrap: wrap;
        }
        .tag{
            margin: 0 10px;
            cursor: pointer;
            @include mobile{
                margin-bottom: 10px;
                span{
                    font-size: 14px;
                    line-height: 17px;
                }
            }
        }
    }
   &__case-studies{
       margin-top: 120px;
       margin-bottom: 120px;
       display: flex;
       justify-content: center;
       align-items: center;
       &__content{
           width: 1300px;
            display: flex;
            flex-wrap: wrap;
            justify-content: flex-start;
            align-items: center;
            @include mobile{
                width: 100%;
            }
            @include tablet{
                width: 924px;
            }
            .case-study{
                // transition: all 0.3s ease;
                // display: none;
                // display: none;
                display: flex;
                @include tablet{
                    width: 300px;
                    height: 300px;
                    background-repeat: no-repeat;
                    background-size: 100%;
                }
                &.hide{
                    
                    display: none;
                    // animation: fadeOut 1s ease-in-out;
                }
                &.show{
                    animation: fadeIn 0.5s ease-in-out;
                    display: flex;
                }
            }
       }
       @keyframes fadeIn{
            0%{
                opacity: 0.5;
            }
            100%{
                opacity: 1;
            }
        }
        @keyframes fadeOut{
            0%{
                opacity: 1;
            }
            100%{
                opacity: 0;
            }
        }
   } 
}

